pequeno refactoring, ao devemos mandar hashes para o frontend, passou agora apenas a ser validado no backend
